--- a/src/components/link/link.html
+++ b/src/components/link/link.html
@@ -28,6 +28,7 @@
        :target="target"
        @click="onClick"
        v-if="!isRouterLink"
+       @keyup="onKeyup"
        ref="link">
         <m-icon class="m-link__icon" :name="propIconName" :size="iconSize" v-if="hasIcon" aria-hidden="true"></m-icon>
         <span class="m-link__text">
