Add new icons and set it to the component

--- a/src/components/textfield/textfield.html
+++ b/src/components/textfield/textfield.html
@@ -36,6 +36,7 @@
              v-if="propPasswordIcon">
             <m-icon-button :icon-name="iconNamePassword"
                            button-size="22px"
+                           :title="iconDescriptionPassword"
                            @click="togglePasswordVisibility">{{ iconDescriptionPassword }}</m-icon-button>
         </div>
     </m-input-style>
