Remove hidden text

--- a/src/components/textfield/textfield.html
+++ b/src/components/textfield/textfield.html
@@ -37,7 +37,7 @@
             <m-icon-button :icon-name="iconNamePassword"
                            button-size="22px"
                            :title="iconDescriptionPassword"
-                           @click="togglePasswordVisibility">{{ iconDescriptionPassword }}</m-icon-button>
+                           @click="togglePasswordVisibility"></m-icon-button>
         </div>
     </m-input-style>
     <m-validation-message
