--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -20,7 +20,7 @@
                :id="id"
                class="m-dropdown__input"
                aria-haspopup="true"
-               :aria-controls="id+'-controls'"
+               :aria-controls="ariaControls"
                :aria-expanded="open"
                :disabled="!active"
                :readonly="!filterable"
@@ -74,10 +74,11 @@
                 </m-icon-button>
             </div>
         </template>
-        <ul :id="id+'-controls'"
+        <ul :id="ariaControls"
             class="m-dropdown__list"
             ref="items"
-            :aria-labelledby="id">
+            :aria-labelledby="id"
+            aria-live="polite">
             <slot></slot>
             <m-dropdown-item v-if="!hasItems && !dirty">{{ propTextNoData }}</m-dropdown-item>
             <m-dropdown-item v-if="!hasItems && dirty">{{ propTextNoMatch }}</m-dropdown-item>
