--- a/src/components/timepicker/timepicker.html
+++ b/src/components/timepicker/timepicker.html
@@ -13,7 +13,7 @@
                type="text"
                ref="input"
                aria-haspopup="true"
-               :aria-controls="id+'-controls'"
+               :aria-controls="ariaControls"
                :aria-expanded="open"
                :disabled="!active"
                :placeholder="placeholder"
@@ -50,12 +50,12 @@
             <m-i18n k="m-timepicker:hours" class="m-timepicker__header__hours"></m-i18n>:
             <m-i18n k="m-timepicker:minutes" class="m-timepicker__header__minutes"></m-i18n>
         </div>
-        <div :id="id+'-controls'" class="m-timepicker__body" :aria-labelledby="id">
+        <div :id="ariaControls" class="m-timepicker__body" :aria-labelledby="id">
             <ul class="m-timepicker__body__hours" ref="hours" @scroll="onScroll" @mousedown="onMousedown" @mouseup="onMouseup">
-                <li role="option" v-for="(h, i) in hours"><a href="#" role="option" :aria-selected="i == tempHour" class="m-timepicker__body__hours-item" :class="{'m--is-selected': i == tempHour}" @click.stop.prevent="selectHour(i)">{{formatHour(i)}}</a></li>
+                <li role="option" v-for="(h, i) in hours"><a href role="option" :aria-selected="i == tempHour" class="m-timepicker__body__hours-item" :class="{'m--is-selected': i == tempHour}" @click.stop.prevent="selectHour(i)">{{formatHour(i)}}</a></li>
             </ul>
             <ul class="m-timepicker__body__minutes" ref="minutes" @scroll="onScroll" @mousedown="onMousedown" @mouseup="onMouseup">
-                <li v-for="m in minutes"><a href="#" role="option" :aria-selected="m == tempMinute" class="m-timepicker__body__minutes-item" :class="{'m--is-selected': m == tempMinute}" @click.stop.prevent="selectMinute(m)">{{formatMinute(m)}}</a></li>
+                <li v-for="m in minutes"><a href role="option" :aria-selected="m == tempMinute" class="m-timepicker__body__minutes-item" :class="{'m--is-selected': m == tempMinute}" @click.stop.prevent="selectMinute(m)">{{formatMinute(m)}}</a></li>
             </ul>
         </div>
         <div slot="footer" class="m-timepicker__footer">
