--- a/src/components/link/link.html
+++ b/src/components/link/link.html
@@ -16,7 +16,8 @@
         </span>
         <m-i18n class="m-link__hidden" v-if="isTargetBlank" k="m-link:open-new-tab"></m-i18n>
     </router-link>
-    <a class="m-link" :class="{ 'm--is-unvisited': isUnvisited,
+    <a class="m-link"
+       :class="{ 'm--is-unvisited': isUnvisited,
                  'm--is-disabled': disabled,
                  'm--no-underline': !underline,
                  'm--is-button': isButton,
