Code review: m-menu -> delete propOpen

--- a/src/components/menu/menu.html
+++ b/src/components/menu/menu.html
@@ -1,6 +1,6 @@
 <m-popup class="m-menu"
          :class="{ 'm--is-disabled': disabled }"
-         :open.sync="propOpen"
+         :open.sync="open"
          :padding="false"
          :placement="placement"
          :disabled="disabled"
@@ -11,7 +11,7 @@
                    class="m-menu__button"
                    aria-haspopup="true"
                    :aria-controls="ariaControls"
-                   :aria-expanded="propOpen"
+                   :aria-expanded="open"
                    slot="trigger"
                    :skin="skin"
                    :title="propTitle"
