--- a/src/components/sidebar/sidebar.html
+++ b/src/components/sidebar/sidebar.html
@@ -15,14 +15,14 @@
                         <m-i18n k="m-sidebar:close"></m-i18n>
                     </button>
                     <header class="m-sidebar__header"
-                            :class="{ 'm--has-close-button-right': closeButton && closeButtonPosition === 'right' && origin != 'bottom',
-                                      'm--has-close-button-left': closeButton && closeButtonPosition === 'left' && origin != 'bottom',
-                                      'm--no-content': (!hasHeaderSlot || !hasTitle) && closeButton && origin != 'bottom',
+                            :class="{ 'm--has-close-button-right': closeButton && closeButtonPosition === 'right' && origin !== 'bottom',
+                                      'm--has-close-button-left': closeButton && closeButtonPosition === 'left' && origin !== 'bottom',
+                                      'm--no-content': (!hasHeaderSlot || !hasTitle) && closeButton && origin !== 'bottom',
                                       'm--no-padding': !padding || !paddingHeader }"
                             v-if="hasHeader">
                         <h2 class="m-sidebar__title" v-if="hasTitle">{{ title }}</h2>
                         <slot name="header"></slot>
-                        <m-icon-button @click="closeDialog" icon-name="close" class="m-sidebar__header__close-button" v-if="closeButton && origin != 'bottom'">
+                        <m-icon-button @click="closeDialog" icon-name="close" class="m-sidebar__header__close-button" v-if="closeButton && origin !== 'bottom'">
                             <m-i18n k="m-sidebar:close"></m-i18n>
                         </m-icon-button>
                     </header>
