--- a/src/components/tooltip/tooltip.html
+++ b/src/components/tooltip/tooltip.html
@@ -32,7 +32,7 @@
             mode="button"
             :underline="underline"
             :disabled="disabled"
-            v-if="propMode !=== 'icon'">
+            v-if="propMode !== 'icon'">
         <slot name="link"></slot>
     </m-link>
     <div :id="ariaControls"
