--- a/src/components/textarea/textarea.scss
+++ b/src/components/textarea/textarea.scss
@@ -43,5 +43,14 @@
 
     &__input {
         width: 100%;
+
+        &-hidden {
+            position: absolute;
+            top: 0;
+            right: 0;
+            left: 0;
+            z-index: -1;
+            opacity: 0;
+        }
     }
 }
