--- a/src/components/inplace-edit/inplace-edit.html
+++ b/src/components/inplace-edit/inplace-edit.html
@@ -10,10 +10,10 @@
                 <m-accordion-transition>
                     <div class="m-inplace-edit__buttons-wrap" v-if="propEditMode">
                         <div class="m-inplace-edit__buttons">
-                            <m-button :waiting="submitted" ref="confirm-control" skin="primary" @click.stop="confirm">
+                            <m-button :waiting="waiting" ref="confirm-control" skin="primary" @click.stop="confirm">
                                 <m-i18n k="m-inplace-edit:save"></m-i18n>
                             </m-button>
-                            <m-button :disabled="submitted" ref="cancel-control" skin="secondary" @click.stop="cancel">
+                            <m-button :disabled="waiting" ref="cancel-control" skin="secondary" @click.stop="cancel">
                                 <m-i18n k="m-inplace-edit:cancel"></m-i18n>
                             </m-button>
                         </div>
@@ -27,10 +27,10 @@
             <form>
                 <slot name="editMode"></slot>
                 <div class="m-inplace-edit__buttons">
-                    <m-button :waiting="submitted" ref="confirm-control-mobile" skin="primary" @click="confirm">
+                    <m-button :waiting="waiting" ref="confirm-control-mobile" skin="primary" @click="confirm">
                         <m-i18n k="m-inplace-edit:save"></m-i18n>
                     </m-button>
-                    <m-button :disabled="submitted" ref="cancel-control-mobile" skin="secondary" @click="cancel">
+                    <m-button :disabled="waiting" ref="cancel-control-mobile" skin="secondary" @click="cancel">
                         <m-i18n k="m-inplace-edit:cancel"></m-i18n>
                     </m-button>
                 </div>
