make icon-sandbox works bugfix => badge directive needs to bind only when we are sure the element is inserted in the dom.

--- a/src/components/icon/icon-sandbox.html
+++ b/src/components/icon/icon-sandbox.html
@@ -5,7 +5,7 @@
         <h5>Complété (completed)</h5>
         <m-icon-file v-m-badge="{ state: 'completed' }" extension="pdf"></m-icon-file>
         <h5>En erreur (failed)</h5>
-        <m-icon-file v-m-badge="{ state: 'failed' }" extension="pdf"></m-icon-file>
+        <m-icon-file v-m-badge="{ state: 'error' }" extension="pdf"></m-icon-file>
         <h5>Avertissement (warning)</h5>
         <m-icon-file v-m-badge="{ state: 'warning' }" extension="pdf"></m-icon-file>
     </p>
