Repair icon-file sandbox

--- a/src/components/icon-file/icon-file-sandbox.html
+++ b/src/components/icon-file/icon-file-sandbox.html
@@ -148,17 +148,17 @@
 
     <h5>Échoué</h5>
     <br />
-    <m-icon-file extension=".bmp" v-m-badge="{ state: 'failed'}"></m-icon-file>
-    <m-icon-file extension=".txt" v-m-badge="{ state: 'failed'}"></m-icon-file>
-    <m-icon-file extension=".doc" v-m-badge="{ state: 'failed'}"></m-icon-file>
-    <m-icon-file extension=".ppt" v-m-badge="{ state: 'failed'}"></m-icon-file>
-    <m-icon-file extension=".xls" v-m-badge="{ state: 'failed'}"></m-icon-file>
-    <m-icon-file extension=".ods" v-m-badge="{ state: 'failed'}"></m-icon-file>
-    <m-icon-file extension=".pdf" v-m-badge="{ state: 'failed'}"></m-icon-file>
-    <m-icon-file extension=".mpeg" v-m-badge="{ state: 'failed'}"></m-icon-file>
-    <m-icon-file extension=".mp3" v-m-badge="{ state: 'failed'}"></m-icon-file>
-    <m-icon-file extension=".zip" v-m-badge="{ state: 'failed'}"></m-icon-file>
-    <m-icon-file extension="xyz" v-m-badge="{ state: 'failed'}"></m-icon-file>
+    <m-icon-file extension=".bmp" v-m-badge="{ state: 'error'}"></m-icon-file>
+    <m-icon-file extension=".txt" v-m-badge="{ state: 'error'}"></m-icon-file>
+    <m-icon-file extension=".doc" v-m-badge="{ state: 'error'}"></m-icon-file>
+    <m-icon-file extension=".ppt" v-m-badge="{ state: 'error'}"></m-icon-file>
+    <m-icon-file extension=".xls" v-m-badge="{ state: 'error'}"></m-icon-file>
+    <m-icon-file extension=".ods" v-m-badge="{ state: 'error'}"></m-icon-file>
+    <m-icon-file extension=".pdf" v-m-badge="{ state: 'error'}"></m-icon-file>
+    <m-icon-file extension=".mpeg" v-m-badge="{ state: 'error'}"></m-icon-file>
+    <m-icon-file extension=".mp3" v-m-badge="{ state: 'error'}"></m-icon-file>
+    <m-icon-file extension=".zip" v-m-badge="{ state: 'error'}"></m-icon-file>
+    <m-icon-file extension="xyz" v-m-badge="{ state: 'error'}"></m-icon-file>
 
     <h5>Avertissement</h5>
     <br />
