--- a/src/components/icon/icon.sandbox.html
+++ b/src/components/icon/icon.sandbox.html
@@ -4,7 +4,7 @@
     <p>
         <h5>Complété (completed)</h5>
         <m-icon-file v-m-badge="{ state: 'completed' }" extension="pdf"></m-icon-file>
-        <h5>En erreur (failed)</h5>
+        <h5>En erreur (error)</h5>
         <m-icon-file v-m-badge="{ state: 'error' }" extension="pdf"></m-icon-file>
         <h5>Avertissement (warning)</h5>
         <m-icon-file v-m-badge="{ state: 'warning' }" extension="pdf"></m-icon-file>
