MODUL-173 - update style

--- a/src/components/textarea/textarea.scss
+++ b/src/components/textarea/textarea.scss
@@ -43,6 +43,9 @@
 
     &__input {
         width: 100%;
+        outline: none;
+        resize: none;
+        overflow: hidden;
 
         &-hidden {
             position: absolute;
