--- a/src/components/textarea/textarea.scss
+++ b/src/components/textarea/textarea.scss
@@ -31,8 +31,9 @@
 
         &__maxlenght {
             transition: color $m-transition-duration ease;
-            margin-top: $m-margin--xs;
+            margin-top: 2px; // Magic number
             font-size: $m-font-size--xs;
+            padding-left: $m-padding--xs;
         }
     }
 
