--- a/src/components/validation-message/validation-message.scss
+++ b/src/components/validation-message/validation-message.scss
@@ -13,15 +13,17 @@ $m-validation-message--margin: $m-padding--xs !default;
     &__error,
     &__valid {
         display: inline-flex;
-        align-items: center;
+        align-items: flex-start;
 
         ~ .m-validation-message__helper {
-            margin-top: 2px;
+            margin-top: 2px; // Magic number
         }
 
         &__icon {
             font-size: $m-font-size--xs;
             margin-right: $m-padding--xs;
+            min-width: $m-font-size--xs;
+            margin-top: $m-padding--xs; // Magic number
         }
     }
 
