--- a/src/components/accordion/accordion-transition.scss
+++ b/src/components/accordion/accordion-transition.scss
@@ -1,13 +1,13 @@
-.accordion-enter {
+.m-accordion-enter {
     height: 0;
 }
 
-.accordion-enter-active,
-.accordion-leave-active {
+.m-accordion-enter-active,
+.m-accordion-leave-active {
     transition: height 0.3s ease-out;
     overflow: hidden;
 }
 
-.accordion-leave-to {
+.m-accordion-leave-to {
     height: 0 !important;
 }
