--- a/src/components/accordion/accordion-transition.scss
+++ b/src/components/accordion/accordion-transition.scss
@@ -2,10 +2,12 @@
     height: 0;
 }
 
-.m-accordion-enter-active,
-.m-accordion-leave-active {
-    transition: height 0.3s ease-out;
-    overflow: hidden;
+.m-accordion--has-transition {
+    &.m-accordion-enter-active,
+    &.m-accordion-leave-active {
+        transition: height 0.3s ease-out;
+        overflow: hidden;
+    }
 }
 
 .m-accordion-leave-to {
