--- a/src/components/menu/menu.html
+++ b/src/components/menu/menu.html
@@ -15,7 +15,7 @@
                    slot="trigger"
                    :skin="skin"
                    :title="propTitle"
-                   icon-name="options"
+                   icon-name="m-svg__options"
                    :disabled="disabled"
                    :button-size="size"
                    @click="onClick">
