--- a/src/components/icon-file/icon-file.sandbox.html
+++ b/src/components/icon-file/icon-file.sandbox.html
@@ -132,6 +132,10 @@
     <m-icon-file extension=".mp3" v-m-badge="{ state: 'completed'}"></m-icon-file>
     <m-icon-file extension=".zip" v-m-badge="{ state: 'completed'}"></m-icon-file>
     <m-icon-file extension="xyz" v-m-badge="{ state: 'completed'}"></m-icon-file>
+    <m-icon-file extension=".rm" v-m-badge="{ state: 'completed'}"></m-icon-file>
+    <m-icon-file extension=".mov" v-m-badge="{ state: 'completed'}"></m-icon-file>
+    <m-icon-file extension=".wma" v-m-badge="{ state: 'completed'}"></m-icon-file>
+    <m-icon-file extension=".swf" v-m-badge="{ state: 'completed'}"></m-icon-file>
 
     <h5>Échoué</h5>
     <br />
@@ -146,6 +150,10 @@
     <m-icon-file extension=".mp3" v-m-badge="{ state: 'error'}"></m-icon-file>
     <m-icon-file extension=".zip" v-m-badge="{ state: 'error'}"></m-icon-file>
     <m-icon-file extension="xyz" v-m-badge="{ state: 'error'}"></m-icon-file>
+    <m-icon-file extension=".rm" v-m-badge="{ state: 'error'}"></m-icon-file>
+    <m-icon-file extension=".mov" v-m-badge="{ state: 'error'}"></m-icon-file>
+    <m-icon-file extension=".wma" v-m-badge="{ state: 'error'}"></m-icon-file>
+    <m-icon-file extension=".swf" v-m-badge="{ state: 'error'}"></m-icon-file>
 
     <h5>Avertissement</h5>
     <br />
@@ -160,6 +168,10 @@
     <m-icon-file extension=".mp3" v-m-badge="{ state: 'warning'}"></m-icon-file>
     <m-icon-file extension=".zip" v-m-badge="{ state: 'warning'}"></m-icon-file>
     <m-icon-file extension="xyz" v-m-badge="{ state: 'warning'}"></m-icon-file>
+    <m-icon-file extension=".rm" v-m-badge="{ state: 'warning'}"></m-icon-file>
+    <m-icon-file extension=".mov" v-m-badge="{ state: 'warning'}"></m-icon-file>
+    <m-icon-file extension=".wma" v-m-badge="{ state: 'warning'}"></m-icon-file>
+    <m-icon-file extension=".swf" v-m-badge="{ state: 'warning'}"></m-icon-file>
 
     <h4>Taille</h4>
     <p>
