--- a/src/components/textarea/textarea.html
+++ b/src/components/textarea/textarea.html
@@ -29,7 +29,7 @@
                   @focus="onFocus"
                   @blur="onBlur"
                   @change="onChange"
-                  @keypress.enter.prevent
+                  @keypress.enter="handleEnter"
                   @keyup="onKeyup"
                   @keydown="onKeydown"
                   @paste="onPaste"
