--- a/src/components/error-message/error-message.sandbox.html
+++ b/src/components/error-message/error-message.sandbox.html
@@ -13,4 +13,10 @@
 
     <h5>with stack trace</h5>
     <m-error-message reference-number="123456489" :error="e"></m-error-message>
+
+    <h5>unexpected error popup</h5>
+    <m-button v-m-popup:errorpopup>pop me an error</m-button>
+    <m-modal ref="errorpopup" :negativeLink="false">
+        <m-error-message :error="e" :referenceNumber="123456879"></m-error-message>
+    </m-modal>
 </div>
