--- a/src/components/error-message/error-message.html
+++ b/src/components/error-message/error-message.html
@@ -1,4 +1,4 @@
-<div>
+<div class="m-error-message">
     <m-message state="error">
         <m-i18n k="m-error-message:message"></m-i18n>
     </m-message>
