MODUL-179 - accept line break

--- a/src/components/textarea/textarea.html
+++ b/src/components/textarea/textarea.html
@@ -38,8 +38,7 @@
         </textarea>
         <div class="m-textarea__input-hidden"
              ref="inputHidden"
-             aria-hidden="true">{{ valueLength > 0 ? model : '&nbsp;'}}
-        </div>
+             aria-hidden="true">{{ model }}&nbsp;</div>
     </m-input-style>
     <div class="m-textarea__validation">
         <m-validation-message
