--- a/src/components/textarea/textarea.scss
+++ b/src/components/textarea/textarea.scss
@@ -55,7 +55,7 @@
 
         &-hidden {
             opacity: 0;
-            word-wrap: break-word;
+            white-space: pre-wrap;
         }
     }
 }
