--- a/src/components/radio/radio.sandbox.html
+++ b/src/components/radio/radio.sandbox.html
@@ -1,3 +1,12 @@
 <div>
     Hello from sandbox. I can show you my Vue{{ someData }}
+    <dynamic-sandbox>
+        <m-radio slot-scope="dynamicSandbox" v-bind="dynamicSandbox.data">Some text</m-radio>
+    </dynamic-sandbox>
+    <dynamic-sandbox>
+        <m-accordion slot-scope="dynamicSandbox" v-bind.sync="dynamicSandbox.data">
+            <span slot="header">header text</span>
+            Content text
+        </m-accordion>
+    </dynamic-sandbox>
 </div>
