--- a/src/components/error-message/error-message.html
+++ b/src/components/error-message/error-message.html
@@ -11,7 +11,7 @@
         <p><strong><m-i18n k="m-error-message:browser"></m-i18n>: </strong>{{userAgent}}</p>
         <p v-if="!!referenceNumber"><strong><m-i18n k="m-error-message:reference-number"></m-i18n>: </strong>{{referenceNumber}}</p>
         <p><m-i18n k="m-error-message:date" :params="dateInfo"></m-i18n></p>
-        <pre v-if="error">{{error.stack}}</pre>
+        <pre v-if="propStacktrace">{{error.stack}}</pre>
     </m-accordion>
     <m-link mode="link">
         <m-i18n k="m-error-message:help"></m-i18n>
