--- a/src/components/error-message/error-message.html
+++ b/src/components/error-message/error-message.html
@@ -4,10 +4,8 @@
     </m-message>
     <p><m-i18n k="m-error-message:directions.primary"></m-i18n></p>
     <p><m-i18n k="m-error-message:directions.secondary"></m-i18n></p>
-    <m-accordion skin="light">
-        <span slot="header">
-            <m-i18n k="m-error-message:details"></m-i18n>
-        </span>
+    <m-accordion skin="light" icon-size="small">
+        <m-i18n slot="header" k="m-error-message:details"></m-i18n>
         <p><strong><m-i18n k="m-error-message:browser"></m-i18n>: </strong>{{userAgent}}</p>
         <p v-if="!!referenceNumber"><strong><m-i18n k="m-error-message:reference-number"></m-i18n>: </strong>{{referenceNumber}}</p>
         <p><m-i18n k="m-error-message:date" :params="dateInfo"></m-i18n></p>
