MODUL-179 - Add wordWrap prop to textfield

--- a/src/components/textarea/textarea.scss
+++ b/src/components/textarea/textarea.scss
@@ -52,10 +52,12 @@
         outline: none;
         resize: none;
         overflow: hidden;
+        word-break: break-all;
 
         &-hidden {
             opacity: 0;
             white-space: pre-wrap;
+            word-break: break-all;
         }
     }
 }
