--- a/src/components/textfield/textfield.html
+++ b/src/components/textfield/textfield.html
@@ -4,7 +4,8 @@
                 'm--has-error' : hasError,
                 'm--is-valid' : isValid,
                 'm--has-icon' : hasIcon,
-                'm--has-label': hasLabel },
+                'm--has-label': hasLabel,
+                'm--has-word-wrap':  hasWordWrap},
                 'm--is-type-' + inputType ]"
      @click="onClick"
      :style="{ width: inputWidth, maxWidth: inputMaxWidth }">
@@ -32,8 +33,9 @@
                @change="onChange"
                @paste="onPaste"
                :autocomplete="autocomplete"
-               v-model="model">
-        <template slot="right-content">
+               v-model="model"
+               v-if="!hasWordWrap">
+        <template slot="right-content" v-if="!hasWordWrap">
             <transition name="m--is">
                 <m-icon-button class="m-textfield__icon-password"
                                button-size="22px"
@@ -43,6 +45,28 @@
                                :icon-name="iconNamePassword"
                                v-if="propPasswordIcon && hasValue"></m-icon-button>
             </transition>
+        </template>
+        <template v-if="hasWordWrap">
+            <textarea ref="input"
+                    :id="id"
+                    class="m-textfield__input"
+                    :disabled="!active"
+                    :placeholder="placeholder"
+                    :readonly="readonly"
+                    rows="1"
+                    @focus="onFocus"
+                    @blur="onBlur"
+                    @change="onChange"
+                    @keypress.enter.prevent
+                    @keyup="onKeyup"
+                    @keydown="onKeydown"
+                    @paste="onPaste"
+                    :autocomplete="autocomplete"
+                    v-model="model">
+            </textarea>
+            <div class="m-textfield__input-hidden"
+                ref="inputHidden"
+                aria-hidden="true">{{ model }}&nbsp;</div>
         </template>
     </m-input-style>
     <m-validation-message
