--- a/src/components/textfield/textfield.scss
+++ b/src/components/textfield/textfield.scss
@@ -18,4 +18,27 @@
             opacity: 0;
         }
     }
+
+    &.m--has-word-wrap {
+        .m-textfield__input {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            z-index: 1;
+            width: 100%;
+            outline: none;
+            resize: none;
+            overflow: hidden;
+            margin: 0;
+            word-break: break-all;
+
+            &-hidden {
+                opacity: 0;
+                white-space: pre-wrap;
+                word-break: break-all;
+            }
+        }
+    }
 }
