--- a/src/components/file-select/file-select.sandbox.html
+++ b/src/components/file-select/file-select.sandbox.html
@@ -1,9 +1,13 @@
 <div>
-    <h5>default</h5>
-    <div style="border: solid 1px black">
-        <m-file-select></m-file-select>
-    </div>
-
-    <h5>sample</h5>
-    <m-file-select></m-file-select>
+    <!-- Sandbox template -->
+    <h3>Test Title</h3>
+    <p class="m-u--margin-bottom">
+        Test description
+        <!-- if relevant, add link to PR
+        </br>From <a href="https://github.com/ulaval/modul-components/pull/000" target="blank">PR description</a>
+        -->
+    </p>
+    <p>
+        <m-file-select><!-- Test case --></m-file-select>
+    </p>
 </div>
